--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
+    "crypto-browserify": "^3.12.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "toastify": "^2.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
